<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AppTesteGoogleAuth</string>
    <string name="title_login">Bem-vindo</string>
    <string name="subtitle_login">Faça login para continuar no AppTeste</string>
    <string name="title_register">Criar Conta</string>
    <string name="subtitle_register">Preencha os dados para começar</string>
    <string name="title_home">Área Logada</string>
    <string name="title_localizacao">Localização</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome Completo</string>

    <string name="btn_login">Entrar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="btn_google">Entrar com o Google</string>
    <string name="btn_logout">Sair da Conta</string>
    <string name="btn_localizacao">Onde estou?</string>
    <string name="btn_localizar">Obter Localização</string>

    <string name="txt_dont_have_account">Não tem uma conta? Cadastre-se</string>
    <string name="txt_already_have_account">Já tem uma conta? Faça Login</string>

    <string name="dummy_name">Nome do Usuário</string>
    <string name="dummy_email">usuario@email.com</string>
</resources>